Fix wrapping in footer

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -9,7 +9,7 @@ $content-border-top-color: #bbbbbb;
 $opacity: 0.7;
 $content-border-bottom-color: $bar-background-color;
 
-$screen-width-treshhold: 460px;
+$screen-width-treshhold: 500px;
 
 body {
 	margin: 0;
